--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "" # the base hostname & protocol for your site
 
 youtube_username: UCmehYo0RhkPD58ASRXDbt5A
 github_username: Hanz-Tech
-tindie_usernae: hanztech
+tindie_username: hanztech
 
 # Build settings
 markdown: kramdown
