--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "" # the base hostname & protocol for your site
 youtube_username: UCmehYo0RhkPD58ASRXDbt5A
 github_username: Hanz-Tech
 tindie_username: hanztech
+ig_username: hanz_technology
 
 # Build settings
 markdown: kramdown
