--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ youtube_username: UCmehYo0RhkPD58ASRXDbt5A
 github_username: Hanz-Tech
 tindie_username: hanztech
 ig_username: hanz_technology
-
+etsy_username: HanzTechInc
 # Build settings
 markdown: kramdown
